--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "owenvoke/blade-fontawesome": "^2.6",
         "spatie/enum": "^3.13",
         "wireui/wireui": "^2.0"
     },
