--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "wireui/wireui": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
