--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "owenvoke/blade-fontawesome": "^2.6",
+        "robsontenorio/mary": "^1.35",
         "spatie/enum": "^3.13",
         "wireui/wireui": "^2.0"
     },
