--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@dice-roller/rpg-dice-roller": "^5.5.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.14",
