--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.14",
         "alpinejs": "^3.14.1",
+        "chart.js": "^4.4.4",
         "postcss-nesting": "^13.0.0",
         "sass": "^1.77.8",
         "sass-loader": "^16.0.1"
